Update ActionTest.yml to add Needs: Hi

--- a/.github/workflows/ActionTest.yml
+++ b/.github/workflows/ActionTest.yml
@@ -10,6 +10,7 @@ jobs:
     - name: Say Hi
       run: echo "Hello World"
  Bye:
+  needs: Hi
   runs-on: windows-2022
   steps:
     - name: Say Bye
