Disabled action test and add artifact to build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,9 @@ jobs:
       uses: actions/checkout@v4
     - name: compile
       run: |
-         pwd
          g++ -std=c++11 negarr.cpp proxy.cpp testq1.cpp -o main
+    - name: upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+         name: build-output
+         path: main
