--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,21 @@ jobs:
       with:
          name: build-output
          path: main
+  pakage:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: download artifact
+        uses: actions/download-artifact@v4
+        with:
+         name: build-output
+      - name: create zip
+        run: |
+           zip submission.zip *cpp *.h main
+      - name: upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+         name: submission.zip
+         path: submission.zip
